# torch-mlir

./: .gitmodules  CMakeLists.txt  build-requirements.txt  conda-dev-env.yml  pytorch-requirements.txt  torchvision-requirements.txt
dumps/: MLP.mlp-linalg-to-llvm.txt  MLP.mlp-linalg.mlir  MLP.mlp-llvm.mlir
include/torch-mlir/Conversion/: Passes.td
include/torch-mlir/Conversion/FuseLinalg/: FuseLinalg.h
include/torch-mlir/Conversion/LinalgGenericToVector/: LinalgGenericToVector.h
include/torch-mlir/Conversion/LinalgToKernelCalls/: LinalgToKernelCalls.h
include/torch-mlir/Conversion/TorchToGraph/: TorchToGraph.h
include/torch-mlir/Dialect/: CMakeLists.txt
include/torch-mlir/Dialect/GraphDEMO/IR/: CMakeLists.txt  GraphDEMODialect.h  GraphDEMOOps.h  GraphDEMOOps.td  TilingInterface.h  TilingInterface.td
include/torch-mlir/Dialect/GraphDEMO/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Conversion/: CMakeLists.txt  Passes.cpp
lib/Conversion/FuseLinalg/: CMakeLists.txt  FuseLinalg.cpp
lib/Conversion/LinalgGenericToVector/: CMakeLists.txt  LinalgGenericToVector.cpp
lib/Conversion/LinalgToKernelCalls/: CMakeLists.txt  LinalgToKernelCalls.cpp
lib/Conversion/TorchToGraph/: CMakeLists.txt  TorchToGraph.cpp
lib/Conversion/TorchToLinalg/: DataMovement.cpp  Linear.cpp  Uncategorized.cpp
lib/Conversion/Utils/: Utils.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/GraphDEMO/IR/: CMakeLists.txt  GraphDEMODialect.cpp  GraphDEMOOps.cpp
lib/Dialect/GraphDEMO/Transforms/: CMakeLists.txt  PassDetail.h  Passes.cpp
lib/RefBackend/: CMakeLists.txt
lib/Runtime/: CMakeLists.txt  Kernels.cpp  OneDNNKernels.cpp  OneDnnKernels.cpp  Tensor.hpp
projects/pt1/e2e_testing/: main.py
projects/pt1/examples/: mlp.py
projects/pt1/python/torch_mlir/: __init__.py  _dynamo_fx_importer.py  compiler_utils.py  torchscript.py
projects/pt1/python/torch_mlir_e2e_test/: framework.py  reporting.py
projects/pt1/python/torch_mlir_e2e_test/configs/: torchdynamo.py
projects/pt1/python/torch_mlir_e2e_test/linalg_on_tensors_backends/: cpuprotobackend.py  gpuprotobackend.py  refbackend.py  utils.py  xsmmprotobackend.py
projects/pt1/python/torch_mlir_e2e_test/test_suite/: mlp.py  vision_models.py
projects/pt1/tools/: collect.py
tools/torch-mlir-opt/: CMakeLists.txt
utils/: build-with-imex.sh  build-with-sxmm.sh  level-zero-runtime-log.patch  llvm-error-msg.patch  public-deps.patch  token-name.patch  tpp-in-tree-build.patch
